# MoraJaiSolver

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
src/morajai_solver/: __init__.py  event_dispatcher.py  gui.py  logger.py  main.py
src/morajai_solver/components/: ColorPalette.py  MoraButton.py  MoraColorPicker.py
src/morajai_solver/core/: game_engine.py  movement_strategies.py  solver.py
src/morajai_solver/models/: ColorHexMap.py  MoraBoard.py  MoraColor.py  MoraEvent.py  MoraMode.py
src/morajai_solver/views/: BoardView.py  ControlPanelView.py  SolutionView.py
tests/: test_boards.py  test_event_dispatcher.py  test_victory.py
tests/strategies/: test_black.py  test_blue.py  test_green.py  test_orange.py  test_pink.py  test_purple.py  test_red.py  test_solver.py  test_white.py  test_yellow.py
