[project]
name = "morajai-solver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=6.0.0",
]

[project.scripts]
morajai-solver = "morajai_solver.main:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "nuitka>=4.1.3",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
]
